admin controllers added and also the others controllers in v1
